--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
- <h1>10k coders</h1>   
+ <h1>10k coders</h1>
+ <p>It is a good institute</p>   
 </body>
 </html>
