--- a/resmen.html
+++ b/resmen.html
@@ -28,25 +28,25 @@
 
   <h3>CURRIES</h3>
   <ol>
-    <li><a href="https://www.indianhealthyrecipes.com/butter-chicken/">Butter Chicken Boneless - rs246/-</a></li>
+    <li><a href="https://www.indianhealthyrecipes.com/butter-chicken/">Butter Chicken Boneless - rs246</a></li>
     <li><a href="https://www.indianhealthyrecipes.com/kadai-paneer-gravy-recipe/">kadai panner rs220</a></li>
   </ol>
 
   <h3>INDIAN BREADS</h3>
   <ol>
-    <li><a href="https://www.cookwithmanali.com/tandoori-roti/">Tandoori Roti - rs40/-</a></li>
-    <li><a href="https://www.vegrecipesofindia.com/rumali-roti-recipe/">Rumali Roti - rs40/-</a></li>
+    <li><a href="https://www.cookwithmanali.com/tandoori-roti/">Tandoori Roti - rs40</a></li>
+    <li><a href="https://www.vegrecipesofindia.com/rumali-roti-recipe/">Rumali Roti - rs40</a></li>
   </ol>
 
   <h3>DESSERTS</h3>
   <ol>
-    <li><a href="https://www.tamingtwins.com/biscoff-cheesecake/">biscoff cheese cake -rs100-</a></li>
+    <li><a href="https://www.tamingtwins.com/biscoff-cheesecake/">biscoff cheese cake -rs100</a></li>
     <li><a href="https://en.wikipedia.org/wiki/Double_ka_meetha">Double ka meeta -rs73</a></li>
   </ol>
 
   <h3>BEVERAGES</h3>
   <ol>
-    <li><a href="https://en.wikipedia.org/wiki/Thums_Up">Thums Up - rs40/-</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/Thums_Up">Thums Up - rs40</a></li>
     <li><a href="https://en.wikipedia.org/wiki/Mineral_water">Mineral water - rs20</a></li>
     <li><a href="https://en.wikipedia.org/wiki/Maaza">mazza- rs45</a></li>
     <li><a href="https://en.wikipedia.org/wiki/Sprite">sprite- rs40/-</a></li>
